# RustRC

./: .gitignore  CLAUDE.md  Cargo.toml  README.txt
.claude/: settings.local.json
.claude/skills/: rust-check.md  rust-test.md
src/: main.rs
tests/: DEPENDENCIES.txt  bare_metal.sh  common.sh  freebsd_init.sh  linux_init.sh  netbsd_init.sh  openbsd_init.sh  run_all.sh
